--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +13,8 @@
   "dependencies": {
     "express": "^4.21.0",
     "node-google-translate-skidz": "^1.1.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
